PR/50908: David Binderman: Optimize memset's